--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,14 @@ html, body{
     
   }
   
-  *{
+  body{
     margin: 0;
     padding: 0;
     font-family: poppins;
   background-color: #282C33;
   }
   
+contactus{
+    background-color: #000000;
+    background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
+  }
