Background Colour Change

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,10 @@ html, body{
     margin: 0;
     padding: 0;
     font-family: poppins;
-  background-color: #282C33;
+  /* background-color: #282C33; */
+  background-color: #1b1d22;
+  /* background-color: #161616; */
+  /* background-color: #1b1b1b; */
   }
   
 contactus{
