--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ html, body{
   body{
     margin: 0;
     padding: 0;
-    font-family: poppins;
+    font-family: Fira Code;
   /* background-color: #282C33; */
   background-color: #1b1d22;
   /* background-color: #161616; */
