--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Poppins&family=Source+Code+Pro&family=Libre+Barcode+128+Text&family=Fira+Code&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Poppins&family=Source+Code+Pro&family=Libre+Barcode+128+Text&family=Fira+Code&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,22 +7,25 @@
   src: url(/fonts/mars/Mars.ttf);
 }
 
-html, body{
-    /* overflow-x: hidden; */
-    scroll-behavior: smooth;
-  }
-  
-  body{
-    margin: 0;
-    padding: 0;
-    font-family: Fira Code;
+html,
+body {
+  /* overflow-x: hidden; */
+  scroll-behavior: smooth;
+}
+.night_theme {
+  /* --primary-colour: #000000; */
+  background-color: #000000;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Fira Code;
   /* background-color: #282C33; */
   background-color: #1b1d22;
   /* background-color: #161616; */
   /* background-color: #1b1b1b; */
-  }
-  
-contactus{
-    background-color: #000000;
-    background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
-  }
+}
+contactus {
+  background-color: #000000;
+  background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
+}
