--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -78,10 +78,11 @@
   align-items: center;
   justify-content: center;
   border: 1px solid white;
-  padding: 0.5vw;
+  padding: 0.3vw;
   margin-left: 3vw;
   margin-right: 3vw;
   color: #bdb7b7;
+  font-size: 1vw;
 }
 
 .homePara .homeBox {
