--- a/src/app/works/works.css
+++ b/src/app/works/works.css
@@ -1,9 +1,3 @@
-.worksParent {
-  /* margin-left: 10vw; */
-}
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-}
-
 .worksDot {
   position: absolute;
   color: #bdb7b7;
@@ -84,7 +78,7 @@
   .worksChild {
     font-size: 5vw;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     margin-bottom: 2vh;
   }
@@ -106,7 +100,7 @@
   .worksChild2 {
     font-size: 5vw;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     margin-bottom: 2vh;
     margin-top: 10vh;
