--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -19,10 +19,12 @@
 
 .navbarImg h1 {
   padding-top: 0.5vh;
-  font-size: 1.2vw;
+  font-size: 1.3vw;
   margin-left: 0.4vw;
   color: #c778dd;
-  font-family: mars;
+  font-family: var(--font-mars);
+  font-weight: 900;
+  letter-spacing: -6px;
 }
 
 .navbarLine {
@@ -60,7 +62,7 @@
 
 .navbarComponents ul {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   list-style-type: none;
 }
@@ -69,6 +71,7 @@
   margin-right: 1vw;
   cursor: pointer;
   font-size: 1vw;
+  font-weight: 500;
 }
 
 .navbarComponents li:last-child {
@@ -95,4 +98,6 @@
 
 .navbarComponents span {
   color: #c778dd;
+  font-size: 1vw;
+  margin-right: 1px;
 }
