--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -70,8 +70,9 @@
 .navbarComponents li {
   margin-right: 1vw;
   cursor: pointer;
-  font-size: 1vw;
+  font-size: 16px;
   font-weight: 500;
+  font-family: var(--font-mars);
 }
 
 .navbarComponents li:last-child {
@@ -100,4 +101,5 @@
   color: #c778dd;
   font-size: 1vw;
   margin-right: 1px;
+  font-size: 11px;
 }
