--- a/src/app/home.css
+++ b/src/app/home.css
@@ -29,7 +29,7 @@
 
 .homeIntro p {
   margin-top: 3vh;
-  font-size: 64px;
+  font-size: 56px;
   color: grey;
   font-family: var(--font-barcode);
 }
@@ -97,19 +97,19 @@
 }
 
 .homeContact {
-  font-size: 22px;
+  font-size: 18px;
   margin-top: 1vw;
-  width: 8vw;
+  width: fit-content;
   padding: 0.2vw 0.4vw;
   color: #c778dd;
-  font-weight: 600;
   border: 1px solid white;
   box-sizing: border-box;
   box-shadow: 0vh 1vh 1vh;
   cursor: pointer;
-  font-weight: 700;
+  font-weight: 600;
   font-family: var(--font-sourceCode);
   text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
