--- a/src/app/works/works.css
+++ b/src/app/works/works.css
@@ -13,11 +13,11 @@
   display: flex;
   align-items: center;
   color: white;
-  font-family: Fira Code;
+  font-family: var(--font-poppins);
   margin-left: 10vw;
   margin-top: 10vh;
   font-size: 2vw;
-  font-weight: 600;
+  font-weight: 700;
 }
 .worksHead span {
   color: #c778dd;
@@ -68,8 +68,8 @@
   margin-bottom: 2vh;
   color: white;
   font-size: 1.4vw;
-  font-weight: 500;
-  font-family: Source Code Pro;
+  font-weight: 600;
+  font-family: var(--font-poppins);
 }
 .worksChild span {
   color: #c778dd;
@@ -90,8 +90,8 @@
   margin-left: 10vw;
   color: white;
   font-size: 1.4vw;
-  font-weight: 500;
-  font-family: Source Code Pro;
+  font-weight: 600;
+  font-family: var(--font-poppins);
 }
 .worksChild2 span {
   color: #c778dd;
@@ -110,7 +110,7 @@
 .worksProjectsRenderer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-row-gap: 5vh;
+  grid-row-gap: 6vh;
   margin-top: 2vh;
   margin-left: 10vw;
   margin-right: 10vw;
@@ -200,8 +200,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #c778dd;
-  padding: 0.5vh 2vw;
+  border: 2px solid #c778dd;
+  padding: 0.2vh 2vw;
+  border-radius: 1vw;
 }
 
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
@@ -216,8 +217,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #bdb7b7;
-  padding: 0.5vh 2vw;
+  border: 2px solid #bdb7b7;
+  padding: 0.2vh 1vw;
+  border-radius: 1vw;
 }
 
 .worksProjectButtons {
