--- a/src/app/aboutme/aboutme.css
+++ b/src/app/aboutme/aboutme.css
@@ -1,17 +1,16 @@
 .aboutParent {
   padding-top: 5vh;
-  font-family: Fira Code;
 }
 
 .aboutHead {
   display: flex;
   align-items: center;
   color: white;
-  font-family: Fira Code;
+  font-family: var(--font-poppins);
   margin-left: 10vw;
   margin-top: 5vh;
   font-size: 2vw;
-  font-weight: 600;
+  font-weight: 700;
 }
 .aboutHead span {
   color: #c778dd;
@@ -90,7 +89,8 @@
   padding-right: 4vw;
   text-align: justify;
   color: #abb2bf;
-  font-family: Fira Code;
+  font-family: var(--font-poppins);
+  font-size: 18px;
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .aboutAbout {
@@ -118,11 +118,11 @@
   display: flex;
   align-items: center;
   color: white;
-  font-family: Fira Code;
+  font-family: var(--font-poppins);
   margin-left: 10vw;
   margin-top: 5vh;
   font-size: 2vw;
-  font-weight: 600;
+  font-weight: 700;
   span {
     color: #c778dd;
   }
@@ -135,12 +135,12 @@
   }
 }
 .aboutPersonalTouchHobbies p {
-  font-family: Fira Code;
+  font-family: var(--font-poppins);
   text-align: center;
   margin: 5vh 10vw;
   color: #bcc4d3;
-  font-size: 1vw;
-  padding: 0.8vw;
+  font-size: 14px;
+  padding: 1.5vh 1vw;
   border: 1px solid #abb2bf;
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
@@ -162,7 +162,7 @@
   justify-content: center;
   align-items: center;
   color: #bcc4d3;
-  font-family: Fira Code;
+  font-family: var(--font-sourceCode);
   margin-right: 10vw;
   margin-left: 10vw;
   column-gap: 1vw;
@@ -179,6 +179,7 @@
 .aboutPersonalTouchFactsItem {
   padding: 0.5vw;
   border: 1px solid #7b7a7a;
+  font-size: 14px;
 }
 
 .aboutStraightLine {
