--- a/src/app/works/works.css
+++ b/src/app/works/works.css
@@ -131,11 +131,14 @@
   border: 1px solid white;
   padding-bottom: 2vh;
   width: 20vw;
-  min-height: 50vh;
+  min-height: 40vh;
   height: auto;
   border-radius: 1vw;
   overflow: hidden;
   box-shadow: 0vw 0vh 1vw 0.2vw #c778dd;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .worksProjectContainer {
@@ -182,12 +185,13 @@
 }
 
 .worksProjectDes {
-  padding-bottom: 1vw;
+  padding-bottom: 2vh;
   padding-left: 1.5vw;
   padding-right: 1.5vw;
   font-family: var(--font-sourceCode);
   color: #bdb7b7;
   text-align: center;
+  font-size: 12px;
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .worksProjectDes {
