--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -45,11 +45,13 @@
 }
 
 .navbarSocials {
-  cursor: pointer;
   position: absolute;
   margin-top: 6vh;
   color: #abb2bf;
   margin-left: -7vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1vh;
 }
 
 .navbarSocials img {
@@ -67,19 +69,18 @@
   list-style-type: none;
 }
 
-.navbarComponents li {
+.navbarComponents a {
   margin-right: 1vw;
-  cursor: pointer;
   font-size: 12px;
   font-weight: 500;
   font-family: var(--font-mars);
 }
 
-.navbarComponents li:last-child {
+.navbarComponents a:last-child {
   margin-right: 0vw;
 }
 
-.navbarComponents li:hover {
+.navbarComponents a:hover {
   animation-name: navbarBounce;
   animation-duration: 0.1s;
   animation-iteration-count: 3;
