--- a/src/app/services/services.css
+++ b/src/app/services/services.css
@@ -114,3 +114,56 @@
     }
   }
 }
+
+.service-projects-head {
+  font-size: 16px;
+  padding-top: 1vh;
+}
+
+.service-project-container {
+  margin: 5vh 0;
+  background-color: rgb(199, 120, 221, 0.15);
+  width: 350px;
+  padding: 2vh 1vw;
+  border-radius: 1vw;
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+
+  img {
+    border-radius: 1vw;
+    border: 1px solid #ffffff;
+  }
+}
+
+.service-project-price {
+  padding: 0.5vh 0.5vw;
+  font-size: 14px;
+  background-color: rgb(255, 0, 128);
+  width: fit-content;
+  border-radius: 1vw;
+  font-weight: 700;
+}
+
+.service-project-container-headline {
+  font-size: 16px;
+  padding: 1vh 0;
+  font-weight: 600;
+}
+
+.service-project-container-desc {
+  font-size: 12px;
+}
+
+.service-project-container-button {
+  text-align: center;
+  background-color: rgb(0, 255, 0);
+  padding: 0.5vh 0;
+  border-radius: 1vw;
+  color: black;
+  font-weight: 700;
+  transition: all 0.3s ease;
+  &:hover {
+    scale: 1.02;
+  }
+}
