--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,20 +1,22 @@
 .navbarParent {
-  padding-left: 10vw;
-  padding-top: 5vh;
-  padding-right: 10vw;
   display: flex;
   justify-content: space-between;
-  position: relative;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 2vh 2vw;
+  border-bottom: 1px solid #c778dd;
+  /* border-radius: 1vw; */
+  background-color: rgb(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  z-index: 1;
 }
 
 .navbarImg {
   cursor: pointer;
   display: flex;
   align-items: center;
-}
-
-.navbarImg img {
-  width: 1.2vw;
 }
 
 .navbarImg h1 {
@@ -27,14 +29,6 @@
   letter-spacing: -6px;
 }
 
-.navbarLine {
-  border-left: 1px solid #abb2bf;
-  position: absolute;
-  margin-left: -6.3vw;
-  margin-top: -10vh;
-  animation: navbarPopdown 0.5s ease-in forwards;
-}
-
 @keyframes navbarPopdown {
   0% {
     height: 0vh;
@@ -42,20 +36,6 @@
   100% {
     height: 15vh;
   }
-}
-
-.navbarSocials {
-  position: absolute;
-  margin-top: 6vh;
-  color: #abb2bf;
-  margin-left: -7vw;
-  display: flex;
-  flex-direction: column;
-  gap: 1vh;
-}
-
-.navbarSocials img {
-  width: 1.8vw;
 }
 
 .navbarComponents {
@@ -84,6 +64,7 @@
   animation-name: navbarBounce;
   animation-duration: 0.1s;
   animation-iteration-count: 3;
+  color: #c778dd;
 }
 
 @keyframes navbarBounce {
