--- a/src/app/home.css
+++ b/src/app/home.css
@@ -1,39 +1,104 @@
 .homeParent {
-  /* height: 100vh;
-    overflow-y: scroll;
-    scroll-snap-type: y mandatory;
-    width: 100vw; */
-  transition: all 0.1s ease-in-out;
+  padding: 0 5vw;
+  margin-top: 15vh;
 }
 
 .homeMain1 {
-  /* height: 100vh; */
-  /* scroll-snap-align: start; */
-  /* position: relative; */
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+
+  .homePara {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
+    padding: 0.3vw;
+    margin-left: 3vw;
+    margin-right: 3vw;
+    color: #bdb7b7;
+    font-size: 1vw;
+    font-family: var(--font-sourceCode);
+  }
+
+  .homePara .homeBox {
+    height: 2vh;
+    width: 1vw;
+    background-color: #c778dd;
+    margin-right: 0.5vw;
+  }
 }
 
 .homeIntro {
-  margin-top: 15vh;
-  margin-left: 10vw;
+  display: flex;
+  flex-direction: column;
+  gap: 15vh;
+  flex: 8;
+  h1 {
+    font-size: 44px;
+    font-family: var(--font-taurus);
+    line-height: 52px;
+
+    span {
+      color: #c778dd;
+    }
+  }
+
+  p {
+    font-size: 40px;
+    color: grey;
+    font-family: var(--font-barcode);
+  }
+
+  a {
+    font-size: 18px;
+    width: fit-content;
+    padding: 0.2vw 0.4vw;
+    color: #c778dd;
+    border: 1px solid white;
+    box-sizing: border-box;
+    box-shadow: 0vh 1vh 1vh;
+    cursor: pointer;
+    font-weight: 600;
+    font-family: var(--font-sourceCode);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
 }
 
-.homeIntro h1 {
-  font-size: 2.3vw;
-  font-family: var(--font-taurus);
-  line-height: 6vh;
+.homeQuote-parent {
+  position: relative;
+  width: fit-content;
+
+  .homeFormatQuoteTop {
+    color: #bdb7b7;
+    position: absolute;
+    margin-left: 2vw;
+    margin-top: -1.5vh;
+    transform: scaleX(-1);
+    font-size: 24px;
+  }
+
+  .homeQuote {
+    color: white;
+    font-size: 26px;
+    border: 1px solid #bdb7b7;
+    padding: 1vh 1vw;
+    font-family: var(--font-sourceCode);
+  }
+
+  .homeFormatQuoteBottom {
+    color: #bdb7b7;
+    position: absolute;
+    margin-top: -1.5vh;
+    font-size: 24px;
+    right: 2vw;
+  }
 }
 
-.homeIntro h1 span {
-  color: #c778dd;
+.homeImg {
+  flex: 3;
 }
-
-.homeIntro p {
-  margin-top: 3vh;
-  font-size: 56px;
-  color: grey;
-  font-family: var(--font-barcode);
-}
-
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .homeIntro {
     margin-top: 4vh;
@@ -51,16 +116,6 @@
   }
 }
 
-.homeImg {
-  position: absolute;
-  right: 2vw;
-  margin-top: -40vh;
-}
-
-.homeImg img {
-  width: 25vw;
-}
-
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .homeImg {
     margin: 0vh;
@@ -76,42 +131,6 @@
   }
 }
 
-.homePara {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid white;
-  padding: 0.3vw;
-  margin-left: 3vw;
-  margin-right: 3vw;
-  color: #bdb7b7;
-  font-size: 1vw;
-  font-family: var(--font-sourceCode);
-}
-
-.homePara .homeBox {
-  height: 2vh;
-  width: 1vw;
-  background-color: #c778dd;
-  margin-right: 0.5vw;
-}
-
-.homeContact {
-  font-size: 18px;
-  margin-top: 1vw;
-  width: fit-content;
-  padding: 0.2vw 0.4vw;
-  color: #c778dd;
-  border: 1px solid white;
-  box-sizing: border-box;
-  box-shadow: 0vh 1vh 1vh;
-  cursor: pointer;
-  font-weight: 600;
-  font-family: var(--font-sourceCode);
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .homeContact {
     width: 21vw;
@@ -122,7 +141,6 @@
 }
 
 .homeMain2 {
-  margin-top: 40vh;
   position: relative;
 }
 
@@ -132,44 +150,16 @@
   }
 }
 
-.homeFormatQuoteTop {
-  color: #bdb7b7;
-  position: absolute;
-  margin-left: 13vw;
-  margin-top: -1.5vh;
-}
-
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .homeFormatQuoteTop {
     margin-top: -1.2vh;
   }
 }
 
-.homeQuote {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 1.8vw;
-  margin-top: -20vh;
-  border: 1px solid #bdb7b7;
-  margin-left: 10vw;
-  margin-right: 35vw;
-  padding: 1vh;
-  font-family: var(--font-sourceCode);
-}
-
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .homeQuote {
     font-size: 2.5vw;
   }
-}
-
-.homeFormatQuoteBottom {
-  color: #bdb7b7;
-  position: absolute;
-  margin-left: 60vw;
-  margin-top: -1.5vh;
 }
 
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
@@ -202,7 +192,6 @@
   align-items: center;
   color: white;
   font-family: Fira Code;
-  margin-left: 10vw;
   margin-top: 10vh;
   margin-bottom: 5vh;
   font-size: 2vw;
@@ -237,6 +226,7 @@
   font-size: 1.3vw;
   color: #c778dd;
   position: absolute;
+  right: -5vw;
 }
 .homeBorder span:first-child {
   padding-top: 0;
@@ -258,6 +248,7 @@
 .homeContainer {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .homeContainer .profileImage {
@@ -284,7 +275,6 @@
 }
 
 .homeAbout {
-  padding-left: 10vw;
   text-align: justify;
   color: #abb2bf;
   font-family: var(--font-poppins);
