--- a/src/app/works/works.css
+++ b/src/app/works/works.css
@@ -112,9 +112,8 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-row-gap: 6vh;
   margin-top: 2vh;
-  margin-left: 10vw;
-  margin-right: 10vw;
   color: white;
+  justify-content: space-between;
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .worksProjectsRenderer {
@@ -127,7 +126,7 @@
 }
 
 .worksProjectContainer {
-  margin-right: 10vw;
+  /* margin-right: 10vw; */
   border: 1px solid white;
   padding-bottom: 2vh;
   width: 20vw;
