--- a/src/app/works/works.css
+++ b/src/app/works/works.css
@@ -1,3 +1,7 @@
+.worksParent {
+  padding: 0 5vw;
+  padding-top: 15vh;
+}
 .worksDot {
   position: absolute;
   color: #bdb7b7;
@@ -14,8 +18,6 @@
   align-items: center;
   color: white;
   font-family: var(--font-poppins);
-  margin-left: 10vw;
-  margin-top: 10vh;
   font-size: 2vw;
   font-weight: 700;
 }
@@ -60,12 +62,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 1vh;
 }
 
 .worksChild {
-  margin-left: 10vw;
   margin-top: 5vh;
-  margin-bottom: 2vh;
   color: white;
   font-size: 1.4vw;
   font-weight: 600;
@@ -86,8 +87,6 @@
 
 .worksChild2 {
   margin-top: 10vh;
-  margin-bottom: 3vh;
-  margin-left: 10vw;
   color: white;
   font-size: 1.4vw;
   font-weight: 600;
@@ -109,11 +108,11 @@
 
 .worksProjectsRenderer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-row-gap: 6vh;
-  margin-top: 2vh;
+  grid-template-columns: auto auto auto;
+  grid-row-gap: 10vh;
+  margin-top: 5vh;
   color: white;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .worksProjectsRenderer {
@@ -126,7 +125,6 @@
 }
 
 .worksProjectContainer {
-  /* margin-right: 10vw; */
   border: 1px solid white;
   padding-bottom: 2vh;
   width: 20vw;
