--- a/src/app/aboutme/aboutme.css
+++ b/src/app/aboutme/aboutme.css
@@ -1,5 +1,6 @@
 .aboutParent {
-  padding-top: 5vh;
+  padding-top: 15vh;
+  margin: 0 5vw;
 }
 
 .aboutHead {
@@ -7,7 +8,6 @@
   align-items: center;
   color: white;
   font-family: var(--font-poppins);
-  margin-left: 10vw;
   margin-top: 5vh;
   font-size: 2vw;
   font-weight: 700;
@@ -61,7 +61,7 @@
 
 .aboutContainer {
   display: flex;
-  margin-right: 10vw;
+  gap: 5vw;
 }
 .aboutContainer img {
   width: 15vw;
@@ -84,9 +84,7 @@
 }
 
 .aboutAbout {
-  padding-left: 7.5vw;
   padding-top: 5vh;
-  padding-right: 4vw;
   text-align: justify;
   color: #abb2bf;
   font-family: var(--font-poppins);
@@ -119,7 +117,6 @@
   align-items: center;
   color: white;
   font-family: var(--font-poppins);
-  margin-left: 10vw;
   margin-top: 5vh;
   font-size: 2vw;
   font-weight: 700;
@@ -137,7 +134,7 @@
 .aboutPersonalTouchHobbies p {
   font-family: var(--font-poppins);
   text-align: center;
-  margin: 5vh 10vw;
+  margin: 5vh 5vw;
   color: #bcc4d3;
   font-size: 14px;
   padding: 1.5vh 1vw;
@@ -163,8 +160,6 @@
   align-items: center;
   color: #bcc4d3;
   font-family: var(--font-sourceCode);
-  margin-right: 10vw;
-  margin-left: 10vw;
   column-gap: 1vw;
   row-gap: 2vh;
 }
@@ -189,7 +184,6 @@
   height: 15vh;
   width: 15vh;
   position: absolute;
-  margin-left: 10vw;
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .aboutStraightLine {
@@ -209,7 +203,6 @@
   width: 15vh;
   position: absolute;
   right: 8vw;
-  margin-left: 10vw;
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .aboutStraightLine2 {
@@ -222,7 +215,7 @@
 }
 
 .aboutChild {
-  margin-left: 10vw;
+  margin-left: 5vw;
   margin-top: 5vh;
   color: white;
   font-size: 1.4vw;
