--- a/src/app/contact/contactme.css
+++ b/src/app/contact/contactme.css
@@ -1,5 +1,6 @@
 .contactparent {
-  padding-top: 5vh;
+  padding-top: 15vh;
+  margin: 0 5vw;
   font-family: var(--font-sourceCode);
 }
 
@@ -8,8 +9,6 @@
   align-items: center;
   color: white;
   font-family: var(--font-poppins);
-  /* margin-left: 10vw; */
-  margin-top: 5vh;
   font-size: 2vw;
   font-weight: 600;
 }
@@ -34,7 +33,6 @@
   display: flex;
   align-items: center;
   padding-top: 2vh;
-  /* margin-left: 10vw; */
 }
 .contact p {
   font-family: var(--font-sourceCode);
@@ -53,7 +51,6 @@
   color: #abb2bf;
   font-size: 1vw;
   font-family: Fira Code;
-  margin-right: 10vw;
   border: 1px solid #bdbdbd;
   padding: 0.8vw;
   text-align: left;
