"Updated contact page CSS and JSX: added new styles and components, including a contact form and social media links."

--- a/src/app/contact/contactme.css
+++ b/src/app/contact/contactme.css
@@ -79,3 +79,113 @@
     display: none;
   }
 }
+
+.contact-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 2vw;
+  font-family: var(--font-poppins);
+  color: black;
+  margin: 5vh 5vw;
+  padding: 3vh 1vw;
+  border: 1px solid white;
+  border-radius: 1vw;
+  background-color: white;
+
+  .contact-left {
+    flex: 4;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .contact-left-top {
+      display: flex;
+      flex-direction: column;
+      gap: 2vh;
+      padding: 2vh 1vw;
+    }
+    .contact-icon {
+      padding: 5px;
+      border-radius: 1vw;
+      border: 1px solid black;
+      font-size: 40px;
+
+      &:hover {
+        background-color: #c778dd;
+      }
+    }
+    .contact-options-item {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      font-weight: 700;
+      font-size: 18px;
+    }
+
+    .contact-social-icons {
+      display: flex;
+      gap: 1vw;
+
+      a {
+        padding: 5px;
+        border: 1px solid slategray;
+        border-radius: 5px;
+
+        &:hover {
+          background-color: #c778dd;
+        }
+      }
+    }
+  }
+  .contact-right {
+    flex: 6;
+    border-radius: 1vw;
+    background-color: #c778dd;
+    padding: 2vh 2vw;
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+    h1 {
+      font-size: 28px;
+      font-weight: 600;
+    }
+    p {
+      font-size: 16px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 5vh;
+    }
+
+    input {
+      background-color: transparent;
+      border-bottom: 2px solid black;
+      outline: none;
+      &::placeholder {
+        color: black;
+        font-weight: 600;
+        font-size: 14px;
+        border: none;
+      }
+    }
+
+    label {
+      font-size: 16px;
+      font-weight: 600;
+    }
+
+    button {
+      padding: 1vh 0;
+      background-color: black;
+      color: white;
+      border-radius: 1vw;
+      font-weight: 600;
+    }
+    .form-desc {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
