--- a/src/app/home.css
+++ b/src/app/home.css
@@ -1,12 +1,23 @@
 .homeParent {
   padding: 0 5vw;
   margin-top: 15vh;
+
+  @media (max-width: 768px) {
+    margin-top: 10vh;
+    padding: 0 5vw;
+  }
 }
 
 .homeMain1 {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 2vh;
+  }
 
   .homePara {
     display: flex;
@@ -19,6 +30,11 @@
     color: #bdb7b7;
     font-size: 1vw;
     font-family: var(--font-sourceCode);
+
+    @media (max-width: 768px) {
+      font-size: 14px;
+      gap: 2px;
+    }
   }
 
   .homePara .homeBox {
@@ -26,6 +42,10 @@
     width: 1vw;
     background-color: #c778dd;
     margin-right: 0.5vw;
+
+    @media (max-width: 768px) {
+      width: 2vh;
+    }
   }
 }
 
@@ -34,10 +54,20 @@
   flex-direction: column;
   gap: 15vh;
   flex: 8;
+
+  @media (max-width: 768px) {
+    gap: 5vh;
+  }
+
   h1 {
     font-size: 44px;
     font-family: var(--font-taurus);
     line-height: 52px;
+
+    @media (max-width: 768px) {
+      font-size: 18px;
+      line-height: 24px;
+    }
 
     span {
       color: #c778dd;
@@ -48,6 +78,11 @@
     font-size: 40px;
     color: grey;
     font-family: var(--font-barcode);
+
+    @media (max-width: 768px) {
+      font-size: 28px;
+      line-height: 32px;
+    }
   }
 
   a {
@@ -63,6 +98,13 @@
     font-family: var(--font-sourceCode);
     text-transform: uppercase;
     letter-spacing: 1px;
+
+    @media (max-width: 768px) {
+      font-size: 16px;
+      padding: 2px 2vw;
+      border-radius: 1vw;
+      box-shadow: 0vh 1vw 1vw;
+    }
   }
 }
 
@@ -85,6 +127,10 @@
     border: 1px solid #bdb7b7;
     padding: 1vh 1vw;
     font-family: var(--font-sourceCode);
+
+    @media (max-width: 768px) {
+      font-size: 14px;
+    }
   }
 
   .homeFormatQuoteBottom {
@@ -99,91 +145,16 @@
 .homeImg {
   flex: 3;
 }
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeIntro {
-    margin-top: 4vh;
-    font-size: 4vw;
-    margin-left: 8vw;
-    margin-right: 2vw;
-  }
-  .homeIntro p {
-    margin-top: 0.5vh;
-    font-size: 3.5vw;
-    margin-right: 0;
-  }
-  .homeIntro h1 {
-    font-size: 4vw;
-  }
-}
-
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeImg {
-    margin: 0vh;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 5vh;
-  }
-  .homeImg img {
-    width: 70vw;
-  }
-}
-
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeContact {
-    width: 21vw;
-    font-size: 3vw;
-    margin: 0;
-    box-shadow: 0vh 0.5vh 0.5vh;
-  }
-}
 
 .homeMain2 {
   position: relative;
 }
 
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeMain2 {
-    margin-top: 0;
-  }
-}
-
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeFormatQuoteTop {
-    margin-top: -1.2vh;
-  }
-}
-
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeQuote {
-    font-size: 2.5vw;
-  }
-}
-
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeFormatQuoteBottom {
-    margin-top: -1.2vh;
-  }
-}
-
 .homeProjectPadding {
   padding-top: 3vh;
-}
 
-.homeSideBox {
-  color: white;
-  border: 1px solid #bdb7b7;
-  padding: 2vw;
-  margin-top: 10vh;
-  margin-left: 90vw;
-}
-
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeSideBox {
-    padding: 4vw;
-    margin-top: 17vh;
+  @media (max-width: 768px) {
+    padding: 0;
   }
 }
 
@@ -197,18 +168,15 @@
   font-size: 2vw;
   font-weight: 600;
   font-family: var(--font-poppins);
+
+  @media (max-width: 768px) {
+    margin-top: 5vh;
+    font-size: 18px;
+  }
 }
 
 .homeHead span {
   color: #c778dd;
-}
-
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeHead {
-    font-size: 5vw;
-    margin-left: 5vw;
-    margin-top: 3vh;
-  }
 }
 
 .homeDash {
@@ -237,14 +205,6 @@
   font-weight: 700;
 }
 
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeBorder {
-    padding: 0%.5;
-    font-size: 5vw;
-    margin-top: 3vh;
-  }
-}
-
 .homeContainer {
   display: flex;
   align-items: center;
@@ -258,36 +218,12 @@
   width: 18vw;
 }
 
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    row-gap: 5vh;
-    margin: 0vw;
-    padding: 0;
-  }
-
-  .homeContainer img {
-    min-width: 80vw;
-    max-width: 90vw;
-  }
-}
-
 .homeAbout {
   text-align: justify;
   color: #abb2bf;
   font-family: var(--font-poppins);
   font-size: 18px;
   width: 70%;
-}
-
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeAbout {
-    padding: 5vw;
-    margin-top: 2vh;
-    font-size: 3vw;
-  }
 }
 
 .homeViewall {
@@ -300,14 +236,10 @@
   font-family: Fira Code;
   margin-left: 30vw;
   font-family: var(--font-sourceCode);
-}
 
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeViewall {
-    display: flex;
-    margin: 0;
-    margin-left: 10vw;
-    font-size: 3vw;
+  @media (max-width: 768px) {
+    font-size: 12px;
+    margin-left: 15vw;
   }
 }
 
@@ -326,20 +258,6 @@
   display: none;
 }
 
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeMobile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
 .homeDesktop {
   display: block;
-}
-
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .homeDesktop {
-    display: none;
-  }
 }
