--- a/src/app/works/works.css
+++ b/src/app/works/works.css
@@ -113,14 +113,13 @@
   margin-top: 5vh;
   color: white;
   justify-content: space-around;
-}
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .worksProjectsRenderer {
+
+  @media (max-width: 768px) {
     display: flex;
-    flex-wrap: wrap;
-    margin-top: 0vh;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    margin: 0;
+    gap: 5vh;
   }
 }
 
@@ -136,12 +135,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  .worksProjectContainer {
-    margin-right: 0;
-    box-shadow: -1vh 1vh 1.5vh #c778dd;
+
+  @media (max-width: 768px) {
+    width: 80vw;
     border-radius: 5vw;
+    box-shadow: 0vw 0vh 3vw 1vw #c778dd;
   }
 }
 
