"Updated CSS and JSX files for home and skills components, removed image from home page, and refactored skills component layout and styling."

--- a/src/app/home.css
+++ b/src/app/home.css
@@ -172,6 +172,7 @@
   @media (max-width: 768px) {
     margin-top: 5vh;
     font-size: 18px;
+    margin-bottom: 3vh;
   }
 }
 
@@ -195,6 +196,10 @@
   color: #c778dd;
   position: absolute;
   right: -5vw;
+
+  @media (max-width: 768px) {
+    font-size: 16px;
+  }
 }
 .homeBorder span:first-child {
   padding-top: 0;
@@ -224,6 +229,11 @@
   font-family: var(--font-poppins);
   font-size: 18px;
   width: 70%;
+
+  @media (max-width: 768px) {
+    font-size: 12px;
+    width: 90%;
+  }
 }
 
 .homeViewall {
