--- a/src/app/aboutme/aboutme.css
+++ b/src/app/aboutme/aboutme.css
@@ -17,7 +17,7 @@
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .aboutHead {
-    font-size: 5vw;
+    font-size: 22px;
     margin-left: 5vw;
     margin-top: 3vh;
   }
