--- a/src/app/services/services.css
+++ b/src/app/services/services.css
@@ -10,6 +10,10 @@
   margin-top: 10vh;
   font-size: 2vw;
   font-weight: 700;
+
+  @media (max-width: 768px) {
+    font-size: 22px;
+  }
 }
 .serviceHead span {
   color: #c778dd;
@@ -34,7 +38,6 @@
   font-weight: 900;
   font-family: var(--font-poppins);
   border-radius: 0.5vw;
-  /* border: 0.1vw solid #c778dd; */
   padding: 2vh 1.3vw;
   width: 30%;
   text-transform: uppercase;
@@ -66,30 +69,28 @@
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .serviceParent {
-    margin: 0;
-    margin-left: 0vw;
+    margin-top: 10vh;
   }
   .serviceHead {
-    font-size: 5vw;
-    margin-left: 5vw;
+    font-size: 22px;
     margin-top: 5vh;
   }
   .serviceDash {
-    width: 100%;
+    width: 35vw;
   }
   .serviceServices {
-    margin-top: 5vh;
-    margin-left: 0vw;
+    margin-top: 2vh;
+    margin-left: 0;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     row-gap: 2vh;
     justify-content: center;
     align-items: center;
-    margin: 5vw;
   }
   .serviceServiceItems {
     font-size: 3.5vw;
     padding: 2vw;
+    width: 100%;
   }
   .serviceServiceItems p {
     font-size: 3vw;
@@ -106,6 +107,9 @@
   margin-top: 10vh;
   text-align: center;
 
+  @media (max-width: 768px) {
+    margin-top: 5vh;
+  }
   a {
     color: #c778dd;
     &:hover {
@@ -132,6 +136,11 @@
   img {
     border-radius: 1vw;
     border: 1px solid #ffffff;
+  }
+
+  @media (max-width: 768px) {
+    padding: 2vh 3vw;
+    margin-left: 2vw;
   }
 }
 
