--- a/src/app/works/works.css
+++ b/src/app/works/works.css
@@ -1,6 +1,10 @@
 .worksParent {
   padding: 0 5vw;
-  padding-top: 15vh;
+  margin-top: 15vh;
+
+  @media (max-width: 768px) {
+    margin-top: 10vh;
+  }
 }
 .worksDot {
   position: absolute;
@@ -26,9 +30,7 @@
 }
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .worksHead {
-    font-size: 5vw;
-    margin-left: 7vw;
-    margin-top: 3vh;
+    font-size: 22px;
   }
 }
 
@@ -82,6 +84,7 @@
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 2vh;
+    margin-top: 3vh;
   }
 }
 
